# ultimate_rust_foundations

./: Cargo.toml  clippy.toml
affinity/: Cargo.toml
affinity/src/: main.rs
assosicated_types/: Cargo.toml
assosicated_types/src/: main.rs
asyc_blocking/: Cargo.toml
asyc_blocking/src/: main.rs
async_mutex/: Cargo.toml
async_mutex/src/: main.rs
atomic/src/: main.rs
authentication/: Cargo.toml
authentication/src/: lib.rs
blocking/: Cargo.toml
blocking/src/: main.rs
cfg/src/: main.rs
channels1/src/: main.rs
channels2/: Cargo.toml
channels2/src/: main.rs
clo/: Cargo.toml
clo/src/: main.rs
cycles/src/: main.rs
dashing/src/: main.rs
db/: .env  Cargo.toml  hello.db  hello.db-shm  hello.db-wal
db/migrations/: 20240315060536_init.sql  20240315065201_more.sql
db/src/: main.rs
deadlocks/src/: main.rs
display/src/: main.rs
divide_work/src/: main.rs
dropping/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
fibo/src/: main.rs
fileio/: Cargo.toml
fileio/src/: main.rs
fmtp/: Cargo.toml
fmtp/src/: main.rs
foot_gun/: Cargo.toml
foot_gun/src/: main.rs
from_into/src/: main.rs
generics/src/: main.rs
guess_game/src/: main.rs
hello/src/: main.rs
hello_async/src/: main.rs
hello_tokyo/: Cargo.toml
hello_tokyo/src/: main.rs
if_let/src/: main.rs
iter/src/: main.rs
iterators/src/: main.rs
lifetimes/: Cargo.toml
lifetimes/src/: main.rs
login/: users.json
login/src/: main.rs
login_manager/: Cargo.toml  users.json
login_manager/src/: main.rs
logspan/: Cargo.toml
logspan/src/: main.rs
matches/src/: main.rs
memory/src/: main.rs
minigrep/src/: lib.rs
mutexes/src/: main.rs
parking/src/: main.rs
phantom_type/: Cargo.toml
phantom_type/src/: main.rs
pinning/: Cargo.toml
pinning/src/: main.rs
pool/src/: main.rs  pool.rs
primitives/src/: main.rs
rayon_iters/: Cargo.toml
rayon_iters/src/: main.rs
rayon_scopes/: Cargo.toml
rayon_scopes/src/: main.rs
refc/: Cargo.toml
refc/src/: main.rs
refcell/src/: main.rs
restclient/: Cargo.toml
restclient/src/: main.rs
rwlocks/src/: main.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
scoped_threads/src/: main.rs
server/: .env  Cargo.toml  collection.db  collection.db-shm  collection.db-wal
server/migrations/: 20240326063741_init.sql
server/src/: collector.rs  commands.rs  main.rs
shared_data/: Cargo.toml
shared_data/src/: lib.rs
structs/src/: main.rs
tcpserver/: Cargo.toml
tcpserver/src/: main.rs
thread_builder/src/: main.rs
thread_pool/: Cargo.toml
thread_pool/src/: main.rs
thumbnail_server/: Cargo.toml  images.db  images.db-shm  images.db-wal
thumbnail_server/migrations/: 20240317051926_init.sql
thumbnail_server/src/: index.html  main.rs  search.html
tokio_select/: Cargo.toml
tokio_select/src/: main.rs
tokio_testing/: Cargo.toml
tokio_testing/src/: main.rs
tprio/src/: main.rs
trains/src/: main.rs
traits/src/: main.rs
variables/: Cargo.toml
variables/src/: main.rs
web_service/: Cargo.toml
web_service/src/: hello.html  main.rs
while_let/src/: main.rs
worker_crew/: Cargo.toml
worker_crew/src/: main.rs
workers/src/: main.rs
