[package]
name = "ultimate_rust_foundations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["multipart"] }
dotenv = "0.15.0"
futures = "0.3.30"
image = "0.25.0"
memory = "1.1.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
visibility = "0.1.0"

[workspace]
members = ["affinity", "asyc_blocking", "async_mutex", "atomic",
    "authentication", "blocking", "cfg", "channels1", "channels2", "clo", "cycles", "dashing", "db", "deadlocks", "display", "divide_work", "dropping", "errors", "fibo", "fileio", "fmtp", "foot_gun", "from_into", "generics", "guess_game", "hello", "hello_async", "hello_tokyo", "hello_world", "if_let", "iter", "iterators", "lifetimes", "login", "login_manager", "logspan", "matches", "memory", "mutexes", "parking", "pinning", "pool", "primitives", "rayon_iters", "rayon_scopes", "refc", "refcell", "restclient", "rwlocks", "sandbox", "scoped_threads", "server", "shared_data", "structs", "tcpserver", "thread_builder", "thread_pool", "thumbnail_server", "tokio_select", "tokio_testing", "tprio", "trains", "traits", "variables", "web_service", "while_let", "worker_crew", "workers",
]

[lints.clippy]
needless_return = "allow"
pedantic = "warn"
