[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenv = "0.15.0"
