[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
datafusion-objectstore-s3 = "0.2.1"
async-trait = "0.1.52"
aws-config = "0.9.0"
aws-sdk-s3 = "0.9.0"
aws-smithy-async = "0.39.0"
aws-smithy-types = "0.39.0"
aws-smithy-http = "0.39.0"
aws-smithy-types-convert = { version = "0.39.0", features = ["convert-chrono"] }
aws-types = "0.9.0"
bytes = "1.1.0"
datafusion-data-access = { version = "8.0.0" }
futures = "0.3.19"
http = "0.2.6"
num_cpus = "1.13.1"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
arrow = { version = "13", features = ["prettyprint"] }
datafusion = "8.0"