[package]
name = "thumbnail_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["multipart"] }
dotenv = "0.15.0"
futures = "0.3.30"
image = "0.25.0"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower-http = "0.5.2"

[lints.clippy]
needless_return = "allow"
